파일 정리및 갤러리

--- a/myapp/app-server/src/main/webapp/auth/join.html
+++ b/myapp/app-server/src/main/webapp/auth/join.html
@@ -15,14 +15,13 @@
       <h1>HANGANG</h1>
 
       <form id="hangang-form">
-        <input name="email" type="email" placeholder="Email" class="join-input-box" id="email">
-        <input name="password" type="password" placeholder="password" class="join-input-box" id="pwd">
-        <input name="repassword" type="password" placeholder="repassword" class="join-input-box" id="repwd">
-        <input name="name" type="text" placeholder="Name" class="join-input-box">
-        <input name="nickName" type="text" placeholder="Nickname" class="join-input-box">
-        <input name="tel" type="tel" placeholder="Tell" class="join-input-box">
-        <input name="introduce" type="text" placeholder="Introduce" class="join-input-box">
-        <input name="hobby" type="text" placeholder="Hobby" class="join-input-box">
+        <input name ="email" type="email" placeholder="Email" class="join-input-box">
+        <input name ="password" type="password" placeholder="Password" class="join-input-box">
+        <input name ="name" type="text" placeholder="Name" class="join-input-box">
+        <input name ="nickName" type="text" placeholder="Nickname" class="join-input-box">
+        <input name ="tel" type="tel" placeholder="Tell" class="join-input-box">
+        <input name ="introduce" type="text" placeholder="Introduce" class="join-input-box">
+        <input name ="hobby" type="text" placeholder="Hobby" class="join-input-box">
 
         <button id="btn-regist" type="button">가입하기</button>
         <button id="btn-cancel" type="reset">가입취소</button>
@@ -34,5 +33,4 @@
   </div>
 </body>
 <script src="js/join.js"></script>
-
 </html>
