--- a/myapp/react-app/public/index.html
+++ b/myapp/react-app/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
  
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
+  <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=dpf8up2ghs"></script>
   <title>React App</title>
 </head>
 
