--- a/myapp/react-app/public/index.html
+++ b/myapp/react-app/public/index.html
@@ -6,6 +6,10 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+   <!-- jQuery -->
+   <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
+   <!-- iamport.payment.js -->
+   <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js"></script>
  
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=dpf8up2ghs"></script>
